# jellyfin_seerr_loading_screen

./: .gitignore  CHANGELOG.md  README.md  manifest.json
.github/workflows/: dotnet.yml  python.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
jslsd/: pyproject.toml
jslsd/jslsd/: __init__.py  __main__.py  api.py  arr_client.py  config.py  demo.py  jellyseerr_client.py  models.py  poller.py  posters.py
jslsd/tests/: test_arr_client.py  test_config.py  test_posters.py
plugin/: CacheKeyRefreshService.cs  DaemonClient.cs  Jellyfin.Plugin.SeerrLoadingScreen.csproj  PendingItem.cs  Plugin.cs  PluginConfiguration.cs  SeerrLoadingScreenChannel.cs  ServiceRegistration.cs  build-zip.sh
plugin/Configuration/: configPage.html
plugin/ScheduledTasks/: RefreshTask.cs
plugin/Services/: DaemonClient.cs
scripts/: install-daemon.sh  jslsd.service  release.sh
