[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jslsd"
version = "0.1.0"
description = "Side-car daemon: Sonarr/Radarr queue → JSON + poster overlays for Jellyfin"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Petrit Isufi", email = "isufi.petrit@protonmail.com" }]
keywords = ["jellyfin", "sonarr", "radarr", "jellyseerr", "media-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "respx>=0.21",
    "freezegun>=1.5",
]

[project.scripts]
jslsd = "jslsd.__main__:main"

[project.urls]
Homepage = "https://github.com/Petr1t/jellyfin_seerr_loading_screen"
Issues = "https://github.com/Petr1t/jellyfin_seerr_loading_screen/issues"

[tool.hatch.build.targets.wheel]
packages = ["jslsd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC", "S", "PT", "RET", "SIM"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
